--- a/javascript-syntax/index.html
+++ b/javascript-syntax/index.html
@@ -247,6 +247,16 @@
     </div></section>
 
     <section class="slide"><div>
+        <h2>function — функциональное выражение?</h2>
+        <pre>
+            <code>function foo(a) {</code>
+            <code>    bar(a)</code>
+            <code>}(42)</code>
+            <code class="next"><mark class="comment">// returns 42</mark></code>
+        </pre>
+    </div></section>
+
+    <section class="slide"><div>
         <h2>function — функциональное выражение!</h2>
         <pre>
             <code><mark>(</mark>function foo() {</code>
